--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -91,6 +91,15 @@ caption {
   margin-top: 0;
 }
 
+.no-copy {
+	-webkit-user-select: none;
+	 -khtml-user-select: none;
+	   -moz-user-select: none;
+	    -ms-user-select: none;
+	     -o-user-select: none;
+	        user-select: none;
+}
+
 
 /*
  * Placeholder dashboard ideas
